sidebar added and styled

--- a/index.html
+++ b/index.html
@@ -9,6 +9,30 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-3">
+                <nav id = "mainNavbar">
+                    <ul class="nav flex-column">
+                        <li class="nav-item">
+                          <a class="nav-link active" href="#about">About</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="#skills">Skills</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="#experience">Experience</a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="#projects">Projects</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#contact">Contacts</a>
+                        </li>
+                      </ul>
+                </nav>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
