--- a/index.html
+++ b/index.html
@@ -9,10 +9,13 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div class="container">
-        <div class="row">
-            <div class="col-xs-3">
-                <nav id = "mainNavbar">
+    <div class="container-fluid">
+        <div class="row min-vh-100 flex-column flex-md-row" >
+            <aside class="col-12 col-xs-3 col-xl-2 flex-shrink-1">
+                <nav id = "mainNavbar" class="navbar navbar-expand-md navbar-dark bd-dark flex-md-column flex-row align-items-center py-2 sticky-top">
+                    <div class="text-center p-3">
+                        <img src="./images/profile.jpeg" alt="Profile Picture" class="img-fluid rounded-circle my-4 p-1 d-none d-md-block shadow">
+                    </div>
                     <ul class="nav flex-column">
                         <li class="nav-item">
                           <a class="nav-link active" href="#about">About</a>
@@ -31,7 +34,7 @@
                         </li>
                       </ul>
                 </nav>
-            </div>
+            </aside>
         </div>
     </div>
 </body>
