--- a/index.html
+++ b/index.html
@@ -16,25 +16,36 @@
                     <div class="text-center p-3">
                         <img src="./images/profile.jpeg" alt="Profile Picture" class="img-fluid rounded-circle my-4 p-1 d-none d-md-block shadow">
                     </div>
-                    <ul class="nav flex-column">
-                        <li class="nav-item">
-                          <a class="nav-link active" href="#about">About</a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="nav-link" href="#skills">Skills</a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="nav-link" href="#experience">Experience</a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="nav-link" href="#projects">Projects</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#contact">Contacts</a>
-                        </li>
-                      </ul>
+                    <div class="collapse navbar-collapse order-last" id="nav">
+                        <ul class="navbar-nav flex-column w-100 justify-content-center">
+                            <li class="nav-item">
+                              <a class="nav-link active" href="#about">About</a>
+                            </li>
+                            <li class="nav-item">
+                              <a class="nav-link" href="#skills">Skills</a>
+                            </li>
+                            <li class="nav-item">
+                              <a class="nav-link" href="#experience">Experience</a>
+                            </li>
+                            <li class="nav-item">
+                              <a class="nav-link" href="#projects">Projects</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#contact">Contacts</a>
+                            </li>
+                          </ul>
+                    </div>
                 </nav>
             </aside>
+            <main class="col px-0 flex-grow-1 align-self-center">
+                <div class="container py-3">
+                    <h1 class="pb-4">Hi, I am Clare Limo</h1>
+                    <div class="text-wrapp pt-3" style="width: 40rem;">
+                        <p class="fs-2 text text-start">I am an experienced Software Engineer with significant experience in Quality Assurance and a strong understanding of the Software Development and Testing Life Cycle.</p>
+                    </div>
+                   
+                </div>
+            </main>
         </div>
     </div>
 </body>
