--- a/skills.html
+++ b/skills.html
@@ -25,7 +25,7 @@
                               <a class="nav-link" href="#skills">Skills</a>
                             </li>
                             <li class="nav-item">
-                              <a class="nav-link" href="#experience">Experience</a>
+                              <a class="nav-link" href="/experience.html">Experience</a>
                             </li>
                             <li class="nav-item">
                               <a class="nav-link" href="#projects">Projects</a>
@@ -42,9 +42,9 @@
                     <div class="text-wrapp pt-3" style="width: 40rem;">
                         <ul class="fs-2 text text-start">
                             <li><strong>Tools: </strong> Git, Microsoft Azure, Jira, SonarQube, Katalon Studio, Jenkins, TestNG, Cucumber, Jmeter.</li>
-                            <li class="pt-4"><strong>Language: </strong>C#, Java,Javascript, Python, Html/Css</li>
-                            <li class="pt-4"><strong>Frameworks:</strong> .NET Framework, Microsoft Bot Framework, Selenium, BDD Framework, Entity Framework, Bootstrap</li>
-                            <li class="pt-4"><strong>Other Skills: </strong>Agile Methodologies, Automated Testing,Test driven development approaches, MicroServices, API(Rest and SOAP), Design Thinking</li>
+                            <li class="pt-5"><strong>Language: </strong>C#, Java,Javascript, Python, Html/Css</li>
+                            <li class="pt-5"><strong>Frameworks:</strong> .NET Framework, Microsoft Bot Framework, Selenium, BDD Framework, Entity Framework, Bootstrap</li>
+                            <li class="pt-5"><strong>Other Skills: </strong>Agile Methodologies, Automated Testing,Test driven development approaches, MicroServices, API(Rest and SOAP), Design Thinking</li>
                         </ul>
                     </div>
                    
