--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                               <a class="nav-link" href="/skills.html">Skills</a>
                             </li>
                             <li class="nav-item">
-                              <a class="nav-link" href="#experience">Experience</a>
+                              <a class="nav-link" href="/experience.html">Experience</a>
                             </li>
                             <li class="nav-item">
                               <a class="nav-link" href="#projects">Projects</a>
