projects file created

--- a/skills.html
+++ b/skills.html
@@ -28,7 +28,7 @@
                               <a class="nav-link" href="/experience.html">Experience</a>
                             </li>
                             <li class="nav-item">
-                              <a class="nav-link" href="#projects">Projects</a>
+                              <a class="nav-link" href="/projects.html">Projects</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#contact">Contacts</a>
@@ -47,7 +47,6 @@
                             <li class="pt-5"><strong>Other Skills: </strong>Agile Methodologies, Automated Testing,Test driven development approaches, MicroServices, API(Rest and SOAP), Design Thinking</li>
                         </ul>
                     </div>
-                   
                 </div>
             </main>
         </div>
