--- a/projects.html
+++ b/projects.html
@@ -19,7 +19,7 @@
                     <div class="collapse navbar-collapse order-last" id="nav">
                         <ul class="navbar-nav flex-column w-100 justify-content-center">
                             <li class="nav-item">
-                              <a class="nav-link active" href="#about">About</a>
+                              <a class="nav-link active" href="index.html">About</a>
                             </li>
                             <li class="nav-item">
                               <a class="nav-link" href="/skills.html">Skills</a>
@@ -28,22 +28,25 @@
                               <a class="nav-link" href="/experience.html">Experience</a>
                             </li>
                             <li class="nav-item">
-                              <a class="nav-link" href="/projects.html">Projects</a>
+                              <a class="nav-link" href="#projects">Projects</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#contact">Contacts</a>
+                                <a class="nav-link" href="">Contacts</a>
                             </li>
                           </ul>
                     </div>
                 </nav>
             </aside>
             <main class="col px-0 flex-grow-1 align-self-center">
-                <div class="container py-3" id="about">
-                    <h1 class="pb-4">Hi, I am Clare Limo</h1>
+                <div class="container py-3" id="projects">
                     <div class="text-wrapp pt-3" style="width: 40rem;">
-                        <p class="fs-2 text text-start">I am an experienced Software Engineer with significant experience in Quality Assurance and a strong understanding of the Software Development and Testing Life Cycle.</p>
+                        <ul class="fs-2 text text-start">
+                            <li><strong>Tools: </strong> Git, Microsoft Azure, Jira, SonarQube, Katalon Studio, Jenkins, TestNG, Cucumber, Jmeter.</li>
+                            <li class="pt-5"><strong>Language: </strong>C#, Java,Javascript, Python, Html/Css</li>
+                            <li class="pt-5"><strong>Frameworks:</strong> .NET Framework, Microsoft Bot Framework, Selenium, BDD Framework, Entity Framework, Bootstrap</li>
+                            <li class="pt-5"><strong>Other Skills: </strong>Agile Methodologies, Automated Testing,Test driven development approaches, MicroServices, API(Rest and SOAP), Design Thinking</li>
+                        </ul>
                     </div>
-                   
                 </div>
             </main>
         </div>
