projects info added

--- a/projects.html
+++ b/projects.html
@@ -41,10 +41,18 @@
                 <div class="container py-3" id="projects">
                     <div class="text-wrapp pt-3" style="width: 40rem;">
                         <ul class="fs-2 text text-start">
-                            <li><strong>Tools: </strong> Git, Microsoft Azure, Jira, SonarQube, Katalon Studio, Jenkins, TestNG, Cucumber, Jmeter.</li>
-                            <li class="pt-5"><strong>Language: </strong>C#, Java,Javascript, Python, Html/Css</li>
-                            <li class="pt-5"><strong>Frameworks:</strong> .NET Framework, Microsoft Bot Framework, Selenium, BDD Framework, Entity Framework, Bootstrap</li>
-                            <li class="pt-5"><strong>Other Skills: </strong>Agile Methodologies, Automated Testing,Test driven development approaches, MicroServices, API(Rest and SOAP), Design Thinking</li>
+                            <li class="pt-5">
+                                <a href="https://clarelimo.github.io/Share-Feedback/"><h2>Share-Feedback</h2></a>    
+                                Share Feedback is a website that presents a whole new way of products and service as it connects clients and testers who share their feedback on the client's products and services.
+                            </li>
+                            <li class="pt-5">
+                                <h2>Shopping ChatBot</h2>
+                                A ChatBot that Helps customers shop online.It gives them links to different shopping sites.
+                            </li>
+                            <li class="pt-5">
+                                 <h2>Counties In Kenya API</h2> 
+                                 An API which you can get and add counties, sub-counties and wards in Kenya
+                            </li>
                         </ul>
                     </div>
                 </div>
@@ -53,3 +61,10 @@
     </div>
 </body>
 </html>
+
+
+
+
+
+
+
