styled project links

--- a/projects.html
+++ b/projects.html
@@ -42,7 +42,7 @@
                     <div class="text-wrapp pt-3" style="width: 40rem;">
                         <ul class="fs-2 text text-start">
                             <li class="pt-5">
-                                <a href="https://clarelimo.github.io/Share-Feedback/"><h2>Share-Feedback</h2></a>    
+                                <a class="nav-link" href="https://clarelimo.github.io/Share-Feedback/"><h2>Share-Feedback</h2></a>    
                                 Share Feedback is a website that presents a whole new way of products and service as it connects clients and testers who share their feedback on the client's products and services.
                             </li>
                             <li class="pt-5">
