--- a/contacts.html
+++ b/contacts.html
@@ -22,16 +22,16 @@
                               <a class="nav-link active" href="index.html">About</a>
                             </li>
                             <li class="nav-item">
-                              <a class="nav-link" href="/skills.html">Skills</a>
+                              <a class="nav-link" href="skills.html">Skills</a>
                             </li>
                             <li class="nav-item">
-                              <a class="nav-link" href="/experience.html">Experience</a>
+                              <a class="nav-link" href="experience.html">Experience</a>
                             </li>
                             <li class="nav-item">
-                              <a class="nav-link" href="#projects">Projects</a>
+                              <a class="nav-link" href="projects.html">Projects</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="">Contacts</a>
+                                <a class="nav-link" href="contacts.html">Contacts</a>
                             </li>
                           </ul>
                     </div>
@@ -40,20 +40,7 @@
             <main class="col px-0 flex-grow-1 align-self-center">
                 <div class="container py-3" id="projects">
                     <div class="text-wrapp pt-3" style="width: 40rem;">
-                        <ul class="fs-2 text text-start">
-                            <li class="pt-5">
-                                <a class="nav-link" href="https://clarelimo.github.io/Share-Feedback/"><h2>Share-Feedback</h2></a>    
-                                Share Feedback is a website that presents a whole new way of products and service as it connects clients and testers who share their feedback on the client's products and services.
-                            </li>
-                            <li class="pt-5">
-                                <h2>Shopping ChatBot</h2>
-                                A ChatBot that Helps customers shop online.It gives them links to different shopping sites.
-                            </li>
-                            <li class="pt-5">
-                                 <h2>Counties In Kenya API</h2> 
-                                 An API which you can get and add counties, sub-counties and wards in Kenya
-                            </li>
-                        </ul>
+                       
                     </div>
                 </div>
             </main>
