--- a/projects.html
+++ b/projects.html
@@ -22,16 +22,16 @@
                               <a class="nav-link active" href="index.html">About</a>
                             </li>
                             <li class="nav-item">
-                              <a class="nav-link" href="/skills.html">Skills</a>
+                              <a class="nav-link" href="skills.html">Skills</a>
                             </li>
                             <li class="nav-item">
-                              <a class="nav-link" href="/experience.html">Experience</a>
+                              <a class="nav-link" href="experience.html">Experience</a>
                             </li>
                             <li class="nav-item">
-                              <a class="nav-link" href="#projects">Projects</a>
+                              <a class="nav-link" href="projects.html">Projects</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="">Contacts</a>
+                                <a class="nav-link" href="contacts.html">Contacts</a>
                             </li>
                           </ul>
                     </div>
