contact form added

--- a/contacts.html
+++ b/contacts.html
@@ -40,7 +40,23 @@
             <main class="col px-0 flex-grow-1 align-self-center">
                 <div class="container py-3" id="projects">
                     <div class="text-wrapp pt-3" style="width: 40rem;">
-                       
+                        <div class="form-bg">
+                            <form class="form">
+                                <div class="form-group"> 
+                                    <label class="sr-only">Name</label> 
+                                    <input type="text" class="form-control" required="" id="nameNine" placeholder="Your Name"> 
+                                </div>
+                                <div class="form-group mt-4"> 
+                                    <label class="sr-only">Email</label> 
+                                    <input type="email" class="form-control" required="" id="emailNine" placeholder="Email Address"> 
+                                </div>
+                                <div class="form-group mt-4"> 
+                                    <label class="sr-only">Message</label> 
+                                    <textarea class="form-control" required="" rows="7" id="messageNine" placeholder="Write message"></textarea> 
+                                </div> 
+                                <button id="submit" type="submit" class="btn text-center mt-5">Send Message</button>
+                            </form>
+                        </div>
                     </div>
                 </div>
             </main>
