--- a/contacts.html
+++ b/contacts.html
@@ -40,7 +40,9 @@
             <main class="col px-0 flex-grow-1 align-self-center">
                 <div class="container py-3" id="projects">
                     <div class="text-wrapp pt-3" style="width: 40rem;">
+                        <h1 class="mb-5">Contact Me</h1>
                         <div class="form-bg">
+                            
                             <form class="form">
                                 <div class="form-group"> 
                                     <label class="sr-only">Name</label> 
