--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <div class="collapse navbar-collapse order-last" id="nav">
                         <ul class="navbar-nav flex-column w-100 justify-content-center">
                             <li class="nav-item">
-                              <a class="nav-link active" href="#about">About</a>
+                              <a class="nav-link active" href="index.html">About</a>
                             </li>
                             <li class="nav-item">
                               <a class="nav-link" href="skills.html">Skills</a>
