edited about me info

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <div class="container py-3" id="about">
                     <h1 class="pb-4">Hi, I am Clare Limo</h1>
                     <div class="text-wrapp pt-3" style="width: 40rem;">
-                        <p class="fs-2 text text-start">I am an experienced Software Engineer with significant experience in Quality Assurance and a strong understanding of the Software Development and Testing Life Cycle.</p>
+                        <p class="fs-2 text text-start">An experienced Software Engineer with expertise in Quality Assurance and a strong understanding of the Software Development and Testing Life Cycle.</p>
                     </div>
                    
                 </div>
