--- a/projects.html
+++ b/projects.html
@@ -39,22 +39,48 @@
             </aside>
             <main class="col px-0 flex-grow-1 align-self-center">
                 <div class="container py-3" id="projects">
-                    <div class="text-wrapp pt-3" style="width: 40rem;">
-                        <ul class="fs-2 text text-start">
-                            <li class="pt-5">
-                                <a class="nav-link" href="https://clarelimo.github.io/Share-Feedback/"><h2>Share-Feedback</h2></a>    
-                                Share Feedback is a website that presents a whole new way of products and service as it connects clients and testers who share their feedback on the client's products and services.
-                            </li>
-                            <li class="pt-5">
-                                <h2>Shopping ChatBot</h2>
-                                A ChatBot that Helps customers shop online.It gives them links to different shopping sites.
-                            </li>
-                            <li class="pt-5">
-                                 <h2>Counties In Kenya API</h2> 
-                                 An API which you can get and add counties, sub-counties and wards in Kenya
-                            </li>
-                        </ul>
+                    <div class="row">
+                        <div class="col-sm-5">
+                            <div class="card" style="width: 22rem;">
+                                <img src="./images/myFavBand.png" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                  <h5 class="card-title">My Favorite Band</h5>
+                                  <p class="card-text">This is a site of my favorite band which is Anthem Lights. The site gives a description of my favorite music and album by the band. Details of members of the band are also included.</p>
+                                  <a href="https://clarelimo.github.io/My-Favorite-Band/" class="btn btn-primary" id="submit">View Project</a>
+                                </div>
+                              </div>
+                        </div>
+                        <div class="col-sm-5">
+                            <div class="card" style="width: 22rem;">
+                                <img src="./images/shareFeedback.png" class="card-img-top" alt="...">
+                                <div class="card-body">
+                                  <h5 class="card-title">Share Feedback</h5>
+                                  <p class="card-text">Share Feedback is a website that presents a whole new way of products and service as it connects clients and testers who share their feedback on the client's products and services.</p>
+                                  <a href="https://clarelimo.github.io/Share-Feedback/" class="btn btn-primary" id="submit">View Project</a>
+                                </div>
+                            </div>
+                        </div>
                     </div>
+                    <div class="row">
+                        <div class="col-sm-5">
+                          <div class="card" style="width: 22rem;">
+                            <div class="card-body">
+                              <h5 class="card-title">Shopping ChatBot</h5>
+                              <p class="card-text">A ChatBot that Helps customers shop online.It gives them links to different shopping sites.</p>
+                              <a href="https://github.com/clarelimo/OnlineShops" class="btn btn-primary" id="submit">View Project</a>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="col-sm-5">
+                          <div class="card" style="width: 22rem">
+                            <div class="card-body">
+                              <h5 class="card-title">Counties In Kenya API</h5>
+                              <p class="card-text">An API which you can get and add counties, sub-counties and wards in Kenya</p>
+                              <a href="https://github.com/clarelimo/CountiesInKenya" class="btn btn-primary" id="submit">View Project</a>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
                 </div>
             </main>
         </div>
