--- a/projects.html
+++ b/projects.html
@@ -39,10 +39,10 @@
             </aside>
             <main class="col px-0 flex-grow-1 align-self-center">
                 <div class="container py-3" id="projects">
-                    <div class="row">
-                        <div class="col-sm-5">
-                            <div class="card" style="width: 22rem;">
-                                <img src="./images/myFavBand.png" class="card-img-top" alt="...">
+                    <div class="row proj">
+                        <div class="col-sm-4">
+                            <div class="card" style="width: 22rem">
+                                <img src="./images/myFavBand.png" style="height: 20vh;" class="card-img-top" alt="...">
                                 <div class="card-body">
                                   <h5 class="card-title">My Favorite Band</h5>
                                   <p class="card-text">This is a site of my favorite band which is Anthem Lights. The site gives a description of my favorite music and album by the band. Details of members of the band are also included.</p>
@@ -50,9 +50,9 @@
                                 </div>
                               </div>
                         </div>
-                        <div class="col-sm-5">
+                        <div class="col-sm-4">
                             <div class="card" style="width: 22rem;">
-                                <img src="./images/shareFeedback.png" class="card-img-top" alt="...">
+                                <img src="./images/shareFeedback.png" style="height: 20vh;" class="card-img-top" alt="...">
                                 <div class="card-body">
                                   <h5 class="card-title">Share Feedback</h5>
                                   <p class="card-text">Share Feedback is a website that presents a whole new way of products and service as it connects clients and testers who share their feedback on the client's products and services.</p>
@@ -61,9 +61,9 @@
                             </div>
                         </div>
                     </div>
-                    <div class="row">
-                        <div class="col-sm-5">
-                          <div class="card" style="width: 22rem;">
+                    <div class="row proj">
+                        <div class="col-sm-4">
+                          <div class="card" style="width: 22rem; height: 20vh;">
                             <div class="card-body">
                               <h5 class="card-title">Shopping ChatBot</h5>
                               <p class="card-text">A ChatBot that Helps customers shop online.It gives them links to different shopping sites.</p>
@@ -71,8 +71,8 @@
                             </div>
                           </div>
                         </div>
-                        <div class="col-sm-5">
-                          <div class="card" style="width: 22rem">
+                        <div class="col-sm-4">
+                          <div class="card" style="width: 22rem;height: 20vh;">
                             <div class="card-body">
                               <h5 class="card-title">Counties In Kenya API</h5>
                               <p class="card-text">An API which you can get and add counties, sub-counties and wards in Kenya</p>
