sharefeedback image changed

--- a/projects.html
+++ b/projects.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>My Portfolio</title>
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -42,7 +42,7 @@
                     <div class="row proj">
                         <div class="col-sm-4">
                             <div class="card" style="width: 22rem">
-                                <img src="./images/myFavBand.png" style="height: 20vh;" class="card-img-top" alt="...">
+                                <img src="./images/myFavBand.png" class="card-img-top" alt="...">
                                 <div class="card-body">
                                   <h5 class="card-title">My Favorite Band</h5>
                                   <p class="card-text">This is a site of my favorite band which is Anthem Lights. The site gives a description of my favorite music and album by the band. Details of members of the band are also included.</p>
@@ -52,7 +52,7 @@
                         </div>
                         <div class="col-sm-4">
                             <div class="card" style="width: 22rem;">
-                                <img src="./images/shareFeedback.png" style="height: 20vh;" class="card-img-top" alt="...">
+                                <img src="./images/sharefeedback.png" class="card-img-top" alt="...">
                                 <div class="card-body">
                                   <h5 class="card-title">Share Feedback</h5>
                                   <p class="card-text">Share Feedback is a website that presents a whole new way of products and service as it connects clients and testers who share their feedback on the client's products and services.</p>
@@ -63,7 +63,7 @@
                     </div>
                     <div class="row proj">
                         <div class="col-sm-4">
-                          <div class="card" style="width: 22rem; height: 20vh;">
+                          <div class="card" style="width: 22rem">
                             <div class="card-body">
                               <h5 class="card-title">Shopping ChatBot</h5>
                               <p class="card-text">A ChatBot that Helps customers shop online.It gives them links to different shopping sites.</p>
@@ -72,7 +72,7 @@
                           </div>
                         </div>
                         <div class="col-sm-4">
-                          <div class="card" style="width: 22rem;height: 20vh;">
+                          <div class="card" style="width: 22rem;">
                             <div class="card-body">
                               <h5 class="card-title">Counties In Kenya API</h5>
                               <p class="card-text">An API which you can get and add counties, sub-counties and wards in Kenya</p>
