--- a/projects.html
+++ b/projects.html
@@ -38,51 +38,51 @@
                 </nav>
             </aside>
             <main class="col px-0 flex-grow-1 align-self-center">
-                <div class="container py-3" id="projects">
-                    <div class="row proj">
-                        <div class="col-sm-4">
-                            <div class="card" style="width: 22rem">
-                                <img src="./images/myFavBand.png" class="card-img-top" alt="...">
-                                <div class="card-body">
-                                  <h5 class="card-title">My Favorite Band</h5>
-                                  <p class="card-text">This is a site of my favorite band which is Anthem Lights. The site gives a description of my favorite music and album by the band. Details of members of the band are also included.</p>
-                                  <a href="https://clarelimo.github.io/My-Favorite-Band/" class="btn btn-primary" id="submit">View Project</a>
-                                </div>
+              <div class="container py-3" id="projects">
+                  <div class="row proj">
+                      <div class="col-sm-4">
+                          <div class="card">
+                              <img src="./images/myFavBand.png" class="card-img-top" alt="...">
+                              <div class="card-body">
+                                <h5 class="card-title">My Favorite Band</h5>
+                                <p class="card-text">This is a site of my favorite band which is Anthem Lights. The site gives a description of my favorite music and album by the band. Details of members of the band are also included.</p>
+                                <a href="https://clarelimo.github.io/My-Favorite-Band/" class="btn btn-primary" id="submit">View Project</a>
                               </div>
-                        </div>
-                        <div class="col-sm-4">
-                            <div class="card" style="width: 22rem;">
-                                <img src="./images/sharefeedback.png" class="card-img-top" alt="...">
-                                <div class="card-body">
-                                  <h5 class="card-title">Share Feedback</h5>
-                                  <p class="card-text">Share Feedback is a website that presents a whole new way of products and service as it connects clients and testers who share their feedback on the client's products and services.</p>
-                                  <a href="https://clarelimo.github.io/Share-Feedback/" class="btn btn-primary" id="submit">View Project</a>
-                                </div>
                             </div>
-                        </div>
-                    </div>
-                    <div class="row proj">
-                        <div class="col-sm-4">
-                          <div class="card" style="width: 22rem">
-                            <div class="card-body">
-                              <h5 class="card-title">Shopping ChatBot</h5>
-                              <p class="card-text">A ChatBot that Helps customers shop online.It gives them links to different shopping sites.</p>
-                              <a href="https://github.com/clarelimo/OnlineShops" class="btn btn-primary" id="submit">View Project</a>
-                            </div>
+                      </div>
+                      <div class="col-sm-4">
+                          <div class="card">
+                              <img src="./images/sharefeedback.png" class="card-img-top" alt="...">
+                              <div class="card-body">
+                                <h5 class="card-title">Share Feedback</h5>
+                                <p class="card-text">Share Feedback is a website that presents a whole new way of products and service as it connects clients and testers who share their feedback on the client's products and services.</p>
+                                <a href="https://clarelimo.github.io/Share-Feedback/" class="btn btn-primary" id="submit">View Project</a>
+                              </div>
                           </div>
-                        </div>
-                        <div class="col-sm-4">
-                          <div class="card" style="width: 22rem;">
-                            <div class="card-body">
-                              <h5 class="card-title">Counties In Kenya API</h5>
-                              <p class="card-text">An API which you can get and add counties, sub-counties and wards in Kenya</p>
-                              <a href="https://github.com/clarelimo/CountiesInKenya" class="btn btn-primary" id="submit">View Project</a>
-                            </div>
+                      </div>
+                  </div>
+                  <div class="row proj">
+                      <div class="col-sm-4">
+                        <div class="card">
+                          <div class="card-body">
+                            <h5 class="card-title">Shopping ChatBot</h5>
+                            <p class="card-text">A ChatBot that Helps customers shop online.It gives them links to different shopping sites.</p>
+                            <a href="https://github.com/clarelimo/OnlineShops" class="btn btn-primary" id="submit">View Project</a>
                           </div>
                         </div>
                       </div>
-                </div>
-            </main>
+                      <div class="col-sm-4">
+                        <div class="card">
+                          <div class="card-body">
+                            <h5 class="card-title">Counties In Kenya API</h5>
+                            <p class="card-text">An API which you can get and add counties, sub-counties and wards in Kenya</p>
+                            <a href="https://github.com/clarelimo/CountiesInKenya" class="btn btn-primary" id="submit">View Project</a>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+              </div>
+          </main>
         </div>
     </div>
 </body>
