updated the experience page

--- a/experience.html
+++ b/experience.html
@@ -42,8 +42,7 @@
                     <div class="text-wrapp pt-3" style="width: 40rem;">
                         <ul class="text text-start">
                             <li>
-                                <h4>September 2020 to January 2021: Software Engineer at Microsoft Leap Apprenticeship Program</h4> 
-                                <h5 class="pt-3">Achievements</h5>
+                                <h4>Software Engineer - Microsoft Leap Apprenticeship Program</h4> 
                                 <ul class="">
                                     <li>Created a C# library for the azure container registry services.</li>
                                     <li>Wrote automated tests using the library created which helped in monitoring of critical services.</li>
@@ -51,8 +50,7 @@
                                 </ul>
                             </li>
                             <li class="pt-5">
-                                <h4>April 2019 to September 2020: Software Engineer in Test- Safaricom PLC</h4> 
-                                <h5 class="pt-3">Responsibilities</h5>
+                                <h4>Software Engineer in Test - Safaricom PLC</h4> 
                                 <ul class="">
                                     <li>Perform manual, automated and performance testing of the system based on the identified risks.</li>
                                     <li>Accountable for end to end user acceptance testing.</li>
@@ -62,8 +60,7 @@
                                 </ul>
                             </li>
                             <li class="pt-5">
-                                <h4>January 2019 - January 2019: Strategy Innovation and Risk Management intern (Innovation unit) at Kenya Revenue Authority</h4> 
-                                <h5 class="pt-3">Achievements</h5>
+                                <h4>Kenya Revenue Authority - Innovation unit Intern </h4> 
                                 <ul class="">
                                     <li>Designed the monitoring and evaluation system for the Strategy innovation and risk management department.</li>
                                 </ul>
